--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.17)
-project(base_project C)
+project(FINAL_EJ2_CASALS)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(base_project main.c)
+add_executable(base_project main.c HELPER.h HELPER.c)
